acd2-lo (#1653)